# Poison-MASSReporter

./: .gitignore  .pyspector_baseline.json  CONTRIBUTING.md  MANIFEST.in  NOTICE.md  README.md  index.html  pyproject.toml  report.json  requirements.txt  run.py  setup.cfg  setup.py  vulnerable_app.py
pyspector_core/: pyspector_core.cp310-win_amd64.pyd
pyspector_core/rules/: built-in-rules.toml
rust_core/: Cargo.toml
rust_core/src/: issues.rs  lib.rs
rust_core/src/analysis/: config_analysis.rs  mod.rs  taint_analysis.rs
rust_core/src/graph/: mod.rs  representation.rs
scripts/: setup_cron.sh  setup_hooks.sh
src/pyspector/: cli.py  config.py  reporting.py  triage.py
src/pyspector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyspector/_rust_core/: Cargo.toml
src/pyspector/_rust_core/src/: ast_parser.rs  lib.rs  rules.rs
src/pyspector/_rust_core/src/analysis/: ast_analysis.rs  config_analysis.rs  mod.rs  taint_analysis.rs
src/pyspector/_rust_core/src/graph/: call_graph_builder.rs  cfg_builder.rs  mod.rs  representation.rs
src/pyspector/rules/: built-in-rules-ai.toml  built-in-rules.toml
