[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyspector"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0",
    "toml>=0.10",
    "sarif-om>=1.0",
    "jinja2>=3.0",
    "textual>=0.60"
]

[project.scripts]
pyspector = "pyspector.cli:cli"

[tool.maturin]
manifest-path = "rust_core/Cargo.toml"

[tool.setuptools]
packages = ["pyspector"]
package-dir = {"" = "src"}