[package]
name = "pyspector_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pyspector_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
lazy_static = "1.4"
walkdir = "2.5"
rayon = "1.10"
wildmatch = "2.2"
serde_regex = "1.1"
sha1 = "0.10"